--- a/src/css/Pokemons.css
+++ b/src/css/Pokemons.css
@@ -1,3 +1,9 @@
+.poke-header {
+  text-align: center;
+}
+.poke-header h1 {
+  font: normal normal bold 40px/52px Poppins;
+}
 .pokemons-container {
   display: grid;
   gap: 10px;
@@ -7,6 +13,13 @@
 }
 .pokemon-card {
   position: relative;
+}
+
+#modal-img {
+  border: 0px solid rgb(102, 85, 85) !important;
+  margin-left: 150px;
+  width: 300px !important;
+  height: 300px !important;
 }
 .pokemon-card img {
   width: 200px;
@@ -23,9 +36,12 @@
   display: block;
 }
 
+.actions-poke-button:hover {
+  background-color: rgb(224, 204, 204);
+}
 .actions-poke-button {
   cursor: pointer;
-  font: normal normal bold 18px/22px Poppins;
+  font: normal normal bold 20px/25px Poppins;
   z-index: 1;
   width: 100px;
   height: 40px;
@@ -36,13 +52,15 @@
   opacity: 1;
 }
 .card-button-hover {
+  text-align: center;
+  text-decoration: none;
   display: none;
   position: absolute;
   cursor: pointer;
   font: normal normal bold 18px/22px Poppins;
   z-index: 1;
   width: 100px;
-  height: 40px;
+  height: 30px;
   color: #2d127a;
   top: 70%;
   left: 0;
@@ -78,4 +96,190 @@
   height: 100%;
   width: 100%;
   border-radius: 30%;
+}
+
+/**
+**Loading 
+** */
+.lds-roller {
+  left: 46%;
+  margin-top: 10%;
+
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-roller div {
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 40px 40px;
+}
+.lds-roller div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: rgb(32, 18, 18);
+  margin: -4px 0 0 -4px;
+}
+.lds-roller div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+.lds-roller div:nth-child(1):after {
+  top: 63px;
+  left: 63px;
+}
+.lds-roller div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+.lds-roller div:nth-child(2):after {
+  top: 68px;
+  left: 56px;
+}
+.lds-roller div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+.lds-roller div:nth-child(3):after {
+  top: 71px;
+  left: 48px;
+}
+.lds-roller div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+.lds-roller div:nth-child(4):after {
+  top: 72px;
+  left: 40px;
+}
+.lds-roller div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+.lds-roller div:nth-child(5):after {
+  top: 71px;
+  left: 32px;
+}
+.lds-roller div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+.lds-roller div:nth-child(6):after {
+  top: 68px;
+  left: 24px;
+}
+.lds-roller div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+.lds-roller div:nth-child(7):after {
+  top: 63px;
+  left: 17px;
+}
+.lds-roller div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+.lds-roller div:nth-child(8):after {
+  top: 56px;
+  left: 12px;
+}
+@keyframes lds-roller {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/**
+**Modal
+  */
+.poken-datails {
+  text-align: center;
+  font: normal normal bold 22px/30px Poppins;
+}
+
+.modal-contenido {
+  background-color: rgb(224, 204, 204);
+  width: 600px;
+  padding: 10px 20px;
+  margin: 5% auto;
+  position: relative;
+  border-radius: 40px;
+}
+.modal {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 1s;
+  z-index: 1;
+}
+.modal:target {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+/* Unopened lightbox */
+.lightbox {
+  display: none;
+}
+
+/* Opened lightbox */
+.lightbox:target {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Lightbox content */
+.lightbox figcaption {
+  width: 25rem;
+  position: relative;
+  padding: 1.5em;
+  background-color: lightpink;
+}
+
+/* Close button */
+
+.modal .close {
+  position: relative;
+  display: block;
+}
+
+.modal .close::after {
+  right: 1px;
+  top: 1px;
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  display: flex;
+  z-index: 1;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(145, 127, 127);
+  border-radius: 50%;
+  color: white;
+  content: "×";
+  cursor: pointer;
+}
+
+/* Lightbox overlay */
+
+.modal .close::before {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  /* background-color: rgba(0, 0, 0, 0.7); */
+  content: "";
+  cursor: default;
 }
